# Mino

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  Mino.sln  Mino.vcxproj  Mino.vcxproj.filters  README.md
includes/: aff3.h  audio.h  consts.h  gamepad.h  graphics.h  keyboard.h  list.h  mouse.h  synth.h  types.h  utils.h  vec2.h  window.h
project/: assets.c  draw.c  main.c  mino.c  mino.h  svg.h
src/: aff3.c  audio.c  consts.c  gamepad.c  list.c  main.c  synth.c  utils.c  vec2.c  window.c  windowNative.c
src/linux/: AudioNative.c  WindowNative.c
src/macos/: windowNative.m
src/windows/: AudioNative.c  WindowNative.c
tools/: amalgamate.go  embedAsset.go  go.mod  parseSVG.go
tools/AmalgamateSrc/: mino.c  mino.h
